# dominions5-watchdog

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
dominions_watchdog/: __main__.py  data.py  turn_report.py
tests/: test_report.py
