[tool.poetry]
name = "dominions-watchdog"
version = "0.1.0"
description = "Turn tracking helper for the Dominions 5 game."

license = "MIT"

authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]

readme = "README.md"

[tool.poetry.dependencies]
python="^3.9"

[tool.poetry.dev-dependencies]
pytest = "~3.7.2"
black = "~22.3.0"
flake8 = "~4.0.1"
mypy = "^0.950"

[tool.poetry.scripts]
dominions_watchdog = "dominions_watchdog:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
